# LibreGeek-Packaging

./: .gitignore  .gitmodules  .travis.yml  :w  Dockerfile  Makefile  README.md  TODO.md  antimicro_2.21+git+bsos-4_amd64.build  antimicro_2.23+git-1_amd64.build  build-antimicro.sh  build-ds4drv.sh  build-emulationstation-theme-simple.sh  build-flatpack.sh  build-hid-retrobit.sh  build-itch.sh  build-lutris.sh  build-obs-studio.sh  build-openpht.sh  build-pcsx2.sh  build-pcsx2.sh.new  build-pcsx2.sh.old  build-platform.sh  build-plexhometheater.sh  build-ppsspp.sh  build-qt-5.6-alpha.sh  build-sassc.sh  build-snis.sh  build-speedtest-cli.sh  build-xwiimote.sh  centos7-builder.sh  circle.yml  create-arch-chroot.sh  d0-blind-id_0.5.0-1~getdeb3.dsc  ffmpeg_2.7.5-0ubuntu0.15.10.1_amd64.build  git-status-check.py  install-pkg-tools.sh  newtext.txt  pcsx2_20160202+gitd59e4ca+bsos1.dsc  pcsx2_20160202+gitd59e4ca+bsos1_amd64.build  (+9 more)
3doh/: build-3doh.sh
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/: CMakeLists.txt  FindFLAC.cmake
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/audioencoder.flac/: addon.xml
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/audioencoder.flac/resources/: settings.xml
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/debian/: changelog  changelog.in  changelog.tmp  control  copyright  rules
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/depends/common/flac/: 01-nasm.patch  CMakeLists.txt  flac.txt
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/depends/common/ogg/: CMakeLists.txt
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/depends/windows/flac/: CMakeLists.txt  deps.txt  flac.txt
kodi/kodi-audioencoder-flac/audioencoder.flac-Isengard/src/: EncoderFlac.cpp
(+3589 files in other folders)
